# exemplar-billing

./: .editorconfig  .gitignore  README.md  example-data.json  example-tariff.json  example.py  pyproject.toml
billing/: billing.py  models.py  shortcuts.py
billing/usage/: __init__.py  base.py  linear.py
tests/: test_billing.py  test_models.py  test_shortcuts.py
tests/data/: sample-usage.json
tests/test_usage/: test_linear.py
