[tool.poetry]
name = "billing"
version = "0.1.0"
description = ""
authors = ["QasimK <noreply@QasimK.io>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
ipdb = "^0.12.2"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
